--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -327,6 +327,9 @@ body {
   margin-top: 39px;
 }
 
+.banner {
+}
+
 .slider_background {
   object-fit: contain;
   margin: 0 auto;
@@ -357,6 +360,20 @@ body {
   top: 10%;
   right: 0;
   border-radius: 32px;
+}
+
+.banner_img2 {
+  position: absolute;
+  z-index: 3;
+  top: 15%;
+  left: 5%;
+}
+
+.banner_img3 {
+  position: absolute;
+  z-index: 3;
+  top: 15%;
+  right: 5%;
 }
 
 /* .slider_img4 {
@@ -414,7 +431,7 @@ body {
   width: 100%;
   /* border-radius: 32px; */
   min-height: 100%;
-  aspect-ratio: 16/9;
+  /* aspect-ratio: 16/9; */
   object-fit: fill;
 }
 
