--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -103,6 +103,11 @@ body {
   text-decoration: none;
 }
 
+.download_btn:hover {
+  background-color: #4865d9;
+  transition: 0.5s;
+}
+
 .nav {
   display: flex;
   justify-content: space-around;
@@ -123,8 +128,20 @@ body {
   font-weight: 600;
   margin-bottom: 0;
 }
+.info a {
+  text-decoration: none;
+  font-size: 14px;
+  font-family: "sf-pro-display_title";
+  font-weight: 600;
+  margin-bottom: 0;
+}
 .info img {
   margin-left: 15px;
+}
+
+.info a:hover {
+  color: #4865d9;
+  transition: all 0.5s;
 }
 
 .contacts {
@@ -244,6 +261,14 @@ body {
   align-items: center;
   display: flex;
   flex-direction: column;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+.icon_container:hover,
+.icon_container_middle:hover {
+  transition: 0.5s;
+  transform: scale(120%);
 }
 
 .icon_container p {
@@ -258,6 +283,7 @@ body {
 
 .icon_container_middle {
   display: block;
+  cursor: pointer;
   align-items: center;
   display: flex;
   flex-direction: column;
@@ -324,7 +350,7 @@ body {
   max-width: 100%;
   height: 567px;
   overflow: hidden;
-  /* border-radius: 32px; */
+  border-radius: 32px;
 }
 
 .slider_img1 {
@@ -347,20 +373,42 @@ body {
   top: 10%;
   right: 0;
   border-radius: 32px;
+  z-index: 3;
 }
 
 .banner_img2 {
   position: absolute;
-  z-index: 3;
-  top: 15%;
+  z-index: 5;
+  top: 20%;
   left: 5%;
+}
+
+.banner_img2-mob {
+  display: none;
+  position: absolute;
+  z-index: 3;
+  top: 25%;
+  left: 7%;
 }
 
 .banner_img3 {
   position: absolute;
   z-index: 3;
   top: 15%;
-  right: 5%;
+  right: 0;
+}
+
+/* .banner_img3 {
+  position: absolute;
+  z-index: 3;
+  top: 5%;
+  right: -75%;
+} */
+.ztd-icon {
+  position: absolute;
+  z-index: 5;
+  top: 10%;
+  left: 10%;
 }
 
 /* .slider_img4 {
@@ -1569,6 +1617,18 @@ body {
   .header {
     display: none;
   }
+  .banner_img2 {
+    display: none;
+  }
+  .banner_img2-mob {
+    display: block;
+  }
+  .banner_img3 {
+    position: absolute;
+    z-index: 3;
+    top: 15%;
+    right: -25%;
+  }
   .IDEA {
     margin-bottom: 88px;
     padding-left: 53px;
@@ -2032,6 +2092,7 @@ body {
   }
   .slider_img3 {
     top: 40%;
+    right: -40%;
     max-width: 300px;
   }
   .slider_btn {
@@ -2126,6 +2187,8 @@ body {
   }
   .slider_img2 {
     border-radius: 0;
+    top: 0;
+    right: -80%;
   }
   .tile_2 div {
     margin: 0;
@@ -2606,6 +2669,14 @@ body {
     margin-top: 0;
   }
 }
+@media screen and (max-width: 600px) {
+  .banner_img3 {
+    position: absolute;
+    z-index: 3;
+    top: 15%;
+    right: -95%;
+  }
+}
 @media screen and (max-width: 768px) {
   .announce_text .announce_title.title {
     color: #fff;
@@ -2627,6 +2698,9 @@ body {
   .about-us-video-container iframe {
     height: 341px;
     transform: scale(330%);
+  }
+  .slider_img1 {
+    border-radius: 0;
   }
   .about_us_title h1,
   .about_us_title h6 {
@@ -3369,6 +3443,20 @@ body {
   right: 0;
   bottom: 0;
 }
+.video_blog_item::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  left: 0;
+  top: 0;
+  transition: opacity 0.6s;
+  opacity: 0;
+}
+.video_blog_item:hover::after {
+  opacity: 1;
+}
 
 .watch_btn {
   z-index: 2;
@@ -3431,6 +3519,9 @@ body {
   margin-bottom: 81px;
 }
 
+.blogs_item {
+  position: relative;
+}
 .blogs_item .blog_video_desc {
   margin-top: 24px;
 }
@@ -3442,6 +3533,21 @@ body {
   width: 100%;
   height: 230px;
   overflow: hidden;
+}
+.blogs_item::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.2);
+  left: 0;
+  top: 0;
+  transition: opacity 0.6s;
+  border-radius: 32px;
+  opacity: 0;
+}
+.blogs_item:hover::after {
+  opacity: 1;
 }
 
 @media screen and (max-width: 1520px) {
@@ -3634,7 +3740,6 @@ body {
   letter-spacing: 0em;
   text-align: left;
   color: #69696d;
-  overflow: scroll;
 }
 .partner_card a {
   width: 200px;
@@ -3719,8 +3824,11 @@ body {
   max-width: 600px;
 }
 
+.otk_text {
+  /* padding-top: 22px; */
+}
 .otk_text h1 {
-  margin-bottom: 32px;
+  /* margin-bottom: 32px; */
 }
 .otk_text a {
   padding: 14px 32px 14px 32px;
@@ -3735,16 +3843,18 @@ body {
   font-family: "sf-pro-display_title";
   color: #2c2d2e;
   display: inline-block;
-  margin-top: 48px;
+  margin-top: 18px;
 }
 
+.otk_text_section_1,
 .otk_text_section {
-  margin-bottom: 16px;
+  /* margin-bottom: 16px; */
   background-color: #f3f3f5;
   border-radius: 24px;
   padding: 20px 33px 20px 20px;
   max-width: 814px;
 }
+.otk_text_section_1 h5,
 .otk_text_section h5 {
   margin-bottom: 12px;
   font-size: 16px;
@@ -3754,11 +3864,12 @@ body {
   text-align: left;
   font-family: "sf-pro-display_title";
 }
+.otk_text_section_1 h5 img,
 .otk_text_section h5 img {
   margin-right: 6px;
 }
+.otk_text_section_1 p,
 .otk_text_section p {
-  overflow: scroll;
   font-family: "sf-pro-display_medium";
   font-size: 14px;
   font-weight: 400;
@@ -3766,6 +3877,10 @@ body {
   letter-spacing: 0em;
   text-align: left;
   color: #69696d;
+}
+
+.otk_text_section_1 {
+  margin-bottom: 16px;
 }
 
 @media screen and (max-width: 1520px) {
