--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -67,6 +67,7 @@ body {
 }
 
 .header_container {
+  height: 45px;
   max-width: 1520px;
   margin: 0 auto;
   background-color: #e6e7eb;
@@ -91,10 +92,10 @@ body {
   margin-top: 8px;
   margin-bottom: 9px;
   background-color: #d4d6db;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  padding-left: 16px;
+  padding-right: 16px;
   border-radius: 28px;
   font-weight: 600;
   border: none;
@@ -229,8 +230,8 @@ body {
 }
 
 .header_search_container {
-  padding-top: 25px;
-  padding-bottom: 29px;
+  padding-top: 26px;
+  padding-bottom: 26px;
   background-color: #ffffff;
   display: flex;
   align-items: center;
@@ -583,12 +584,13 @@ body {
 /*------------------------------------ Товары и Категории ---------------------------------*/
 .content hr {
   /* color: #e6e7eb; */
-  border: 2px solid;
+  border: 1px solid;
+  margin-top: 48px;
 }
 
 /*------------------------------------ Новые поступления Акции ---------------------------------*/
 .new {
-  margin-top: 50px;
+  margin-top: 48px;
   position: relative;
 }
 .new .link {
@@ -750,8 +752,12 @@ body {
   border-radius: 32px;
 }
 
+.tiles_mob {
+  display: none;
+}
+
 .advantage_title {
-  margin-top: 80px;
+  margin-top: 104px;
   margin-bottom: 48px;
 }
 
@@ -791,10 +797,11 @@ body {
   background-image: url(/assets/img/products/advantages/Frame\ 41.png);
 }
 .tile_1 div {
-  width: 300px;
+  width: 310px;
   height: 100px;
   display: flex;
   flex-direction: column;
+  margin-right: 20px;
   margin-left: 336px;
   margin-top: 65px;
   margin-bottom: 81px;
@@ -966,7 +973,7 @@ body {
 /*------------------------------------ Отзывы ---------------------------------*/
 /*------------------------------------ Актуальное ---------------------------------*/
 .actual {
-  margin-top: 24px;
+  margin-top: 88px;
 }
 .actual .actual_title {
   margin-bottom: 48px;
@@ -1139,7 +1146,7 @@ body {
 
 .footer {
   width: 100%;
-  padding-top: 70px;
+  padding-top: 18px;
   background-color: rgb(232, 234, 244);
 }
 
@@ -1662,6 +1669,12 @@ body {
   }
   .sales_cards {
     grid-template-columns: 1fr 1fr 1fr;
+  }
+  .tiles_mob {
+    display: block;
+  }
+  .tiles {
+    display: none;
   }
   .tile_1,
   .tile_2,
