--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -75,6 +75,7 @@ body {
 }
 
 .header_container {
+  height: 45px;
   max-width: 1520px;
   margin: 0 auto;
   background-color: #e6e7eb;
@@ -98,10 +99,10 @@ body {
   margin-top: 8px;
   margin-bottom: 9px;
   background-color: #d4d6db;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  padding-left: 16px;
+  padding-right: 16px;
   border-radius: 28px;
   font-weight: 600;
   border: none;
@@ -238,8 +239,8 @@ body {
   width: 100%;
 }
 .header_search_container {
-  padding-top: 25px;
-  padding-bottom: 29px;
+  padding-top: 26px;
+  padding-bottom: 26px;
   background-color: #ffffff;
   display: flex;
   align-items: center;
@@ -602,15 +603,16 @@ body {
 }
 /*------------------------------------ Товары и Категории ---------------------------------*/
 
-.content hr {
+.content hr { 
   /* color: #e6e7eb; */
-  border: 2px solid;
+  border: 1px solid;
+  margin-top: 48px;
 }
 
 /*------------------------------------ Новые поступления Акции ---------------------------------*/
 
 .new {
-  margin-top: 50px;
+  margin-top: 48px;
   position: relative;
   .link {
     position: absolute;
@@ -777,8 +779,12 @@ body {
   border-radius: 32px;
 }
 
+.tiles_mob{
+  display: none;
+}
+
 .advantage_title {
-  margin-top: 80px;
+  margin-top: 104px;
   margin-bottom: 48px;
 }
 
@@ -832,10 +838,11 @@ body {
       text-align: center;
       color: #fff;
     }
-    width: 300px;
+    width: 310px;
     height: 100px;
     display: flex;
     flex-direction: column;
+    margin-right: 20px;
     margin-left: 336px;
     margin-top: 65px;
     margin-bottom: 81px;
@@ -1004,7 +1011,7 @@ body {
 
 /*------------------------------------ Актуальное ---------------------------------*/
 .actual {
-  margin-top: 24px;
+  margin-top: 88px;
   .actual_title {
     margin-bottom: 48px;
     span {
@@ -1181,7 +1188,7 @@ body {
 
 .footer {
   width: 100%;
-  padding-top: 70px;
+  padding-top: 18px;
   background-color: rgba(232, 234, 244, 1);
 }
 
@@ -1769,6 +1776,14 @@ body {
 
   .sales_cards {
     grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .tiles_mob{
+    display: block;
+  }
+
+  .tiles{
+    display: none;
   }
 
   .tile_1,
