--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -3606,7 +3606,7 @@ body {
     padding-right: 53px;
   }
   .blog_title {
-    margin-bottom: 0;
+    margin-bottom: 20px;
   }
   .blog_video_desc {
     margin-top: 0 !important;
@@ -3746,12 +3746,15 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr;
   width: 1520px;
-  gap: 97px;
+  row-gap: 32px;
+  -moz-column-gap: 97px;
+       column-gap: 97px;
   margin-bottom: 75px;
 }
 
 .title-partners {
   text-align: left;
+  margin-bottom: 48px;
 }
 
 .title_partner_card {
@@ -3764,11 +3767,12 @@ body {
 
 .partner_card {
   position: relative;
-  height: 432px;
-  border-bottom: #69696d solid 1px;
+  height: 464px;
 }
 .partner_card img {
   margin-bottom: 24px;
+  width: 300px;
+  height: 124px;
 }
 .partner_card h3 {
   margin-bottom: 24px;
@@ -3786,11 +3790,19 @@ body {
 .partner_card a {
   width: 200px;
   position: absolute;
-  bottom: 5%;
+  bottom: 7%;
   padding: 0;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.partner_card hr {
+  height: 1px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  margin: 0;
 }
 
 @media screen and (max-width: 1520px) {
@@ -3820,6 +3832,9 @@ body {
     gap: 97px;
     margin-bottom: 75px;
   }
+  .partner_card p {
+    overflow: hidden;
+  }
 }
 @media screen and (max-width: 992px) {
   .title-partners {
@@ -3844,9 +3859,19 @@ body {
     padding-right: 53px;
     display: grid;
     grid-template-columns: 1fr;
-    width: 324px;
     gap: 20px;
     margin-bottom: 75px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .title-partners {
+    padding-left: 53px;
+  }
+  .partner_card {
+    width: 324px;
+  }
+  .partner_card p {
+    overflow: hidden;
   }
 }
 .otk_wrapper {
