--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -67,7 +67,6 @@ body {
 }
 
 .header_container {
-  height: 45px;
   max-width: 1520px;
   margin: 0 auto;
   background-color: #e6e7eb;
@@ -420,7 +419,7 @@ body {
   position: absolute;
   z-index: 5;
   top: 10%;
-  left: 10%;
+  left: 5%;
 }
 
 /* .slider_img4 {
@@ -753,6 +752,7 @@ body {
   font-weight: 600;
   line-height: 20px;
   letter-spacing: 0px;
+  margin-top: 12px;
   color: #2c2d2e;
 }
 
@@ -803,9 +803,11 @@ body {
 }
 
 .tile_1 {
+  display: flex;
   width: 736px;
   height: 238px;
   background-image: url(/assets/img/products/advantages/Frame\ 41.png);
+  position: relative;
 }
 .tile_1 div {
   width: 310px;
@@ -813,14 +815,12 @@ body {
   display: flex;
   flex-direction: column;
   margin-right: 20px;
-  margin-left: 336px;
   margin-top: 65px;
   margin-bottom: 81px;
 }
 .tile_1 div h1 {
   color: #fff;
   font-size: 48px;
-  text-align: center;
 }
 .tile_1 div p {
   background-color: #28399e;
@@ -831,8 +831,15 @@ body {
   text-align: center;
   color: #fff;
 }
+.tile_1 .icon_tile {
+  position: absolute;
+  top: 5%;
+  right: 3%;
+  border-radius: 0;
+}
 
 .tile_2 {
+  position: relative;
   width: 736px;
   height: 238px;
   background-image: url(/assets/img/products/advantages/Frame\ 44.png);
@@ -855,8 +862,15 @@ body {
   color: #fff;
   display: inline;
 }
+.tile_2 img {
+  position: absolute;
+  top: 5%;
+  right: 3%;
+  border-radius: 0;
+}
 
 .tile_3 {
+  position: relative;
   width: 499px;
   height: 238px;
   background-image: url(/assets/img/products/advantages/Frame\ 42.png);
@@ -869,15 +883,27 @@ body {
   font-size: 48px;
   text-align: center;
 }
+.tile_3 .icon_tile {
+  position: absolute;
+  top: 5%;
+  right: 3%;
+  border-radius: 0;
+}
+.tile_3 .turbine {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
 
 .tile_4 {
+  position: relative;
   width: 960px;
   height: 238px;
   background-image: url(/assets/img/products/advantages/Frame43.png);
 }
 .tile_4 div {
   margin-left: 111px;
-  margin-top: 65px;
+  margin-top: 79px;
 }
 .tile_4 div h1 {
   color: #fff;
@@ -890,6 +916,12 @@ body {
   font-size: 14px;
   font-weight: 400;
   color: #fff;
+}
+.tile_4 img {
+  position: absolute;
+  top: 5%;
+  right: 3%;
+  border-radius: 0;
 }
 
 /*------------------------------------ Наши преимущества ---------------------------------*/
@@ -1008,7 +1040,7 @@ body {
   font-family: "sf-pro-display_title";
   font-size: 32px;
   font-weight: 600;
-  line-height: 40px;
+  line-height: 20px;
   letter-spacing: 0px;
   text-align: left;
   margin-bottom: 42px;
@@ -1040,6 +1072,7 @@ body {
 .announce_link {
   text-decoration: none;
   color: #fff;
+  font-size: 14px;
 }
 .announce_link img {
   color: #fff;
@@ -1087,7 +1120,7 @@ body {
   margin-top: 80px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   gap: 100px;
   position: relative;
   border-radius: 32px;
@@ -1095,13 +1128,12 @@ body {
 }
 .subscribe img {
   position: absolute;
-  left: 50%;
+  left: 40%;
   top: 25%;
 }
 
 .subscribe_title {
   margin-top: 139px;
-  margin-left: 99px;
   margin-bottom: 180px;
   width: 529px;
   position: relative;
@@ -1511,6 +1543,8 @@ body {
 }
 
 .nav_icons_mobile {
+  padding-left: 10px;
+  padding-right: 10px;
   padding-top: 10px;
   padding-bottom: 10px;
   display: flex;
@@ -1929,7 +1963,7 @@ body {
     padding-top: 20px;
     padding-left: 53px;
     padding-right: 53px;
-    padding-bottom: 20px;
+    padding-bottom: 74px;
   }
   .about-btn {
     margin: 0;
@@ -2283,7 +2317,7 @@ body {
     padding-top: 20px;
     padding-left: 53px;
     padding-right: 53px;
-    padding-bottom: 20px;
+    padding-bottom: 74px;
   }
   .about_title p {
     margin-bottom: 12px;
@@ -2698,19 +2732,15 @@ body {
     margin-top: 0;
   }
 }
-@media screen and (max-width: 600px) {
-  .banner_img3 {
-    position: absolute;
-    z-index: 3;
-    top: 15%;
-    right: -95%;
-  }
-}
 @media screen and (max-width: 768px) {
   .announce_text .announce_title.title {
     color: #fff;
     font-family: "sf-pro-display_title";
     font-size: 14px;
+  }
+  .truck {
+    position: absolute;
+    left: -10%;
   }
   .certs {
     padding-left: 23px;
@@ -2838,6 +2868,18 @@ body {
   }
   .partners_title {
     padding-left: 53px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .banner_img3 {
+    position: absolute;
+    z-index: 3;
+    top: 15%;
+    right: -95%;
+  }
+  .truck {
+    position: absolute;
+    left: -45%;
   }
 }
 .suppliers_text {
@@ -3319,8 +3361,8 @@ body {
   }
   .icon_container {
     margin: 0;
-    padding-right: 25px;
-    padding-left: 25px;
+    padding-right: 10px;
+    padding-left: 10px;
   }
   .navbar_icons {
     display: flex;
